# phostdlib

./: CMakeLists.txt  test_array.cpp  test_utility.cpp  test_vector.cpp
include/phoenix/: array.hpp  iterator_flag.hpp  sort.hpp  test.hpp  utility.hpp  vector.hpp
tests/: CMakeLists.txt  test_array.cpp  test_sort.cpp  test_test.cpp  test_utility.cpp  test_vector.cpp
